Prepared app to add new projects.

--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -21,4 +21,7 @@
     <string name="menu_statistics_total">Gesamt</string>
     <string name="menu_newcustomer_save">Speichern</string>
     <string name="menu_newcustomer_cancel">Abbrechen</string>
+
+    <string name="actionmode_save">Speichern</string>
+    <string name="actionmode_cancel">Abbrechen</string>
 </resources>
